# sc-critiques-reco

sc-critique-reco-hnsw/: .gitignore  IA_notice.md  README.md  pyproject.toml
sc-critiques-reco/: .gitignore  Choix_techniques.md  IA_notice.md  README.md  pyproject.toml
sc-critiques-reco/app/: api.py  utils.py
sc-critiques-reco/app/routers/: recommendations.py
sc-critiques-reco/app/schemas/: query.py  recommendations.py
sc-critiques-reco/app/services/: indexer.py  recommender.py
sc-critiques-reco/evaluation/: EVALUATION.md  evaluation.py  run_evaluation.py
