
[project]
name = "sc-critiques-reco"
version = "0.1.0"
description = "Recommandation system for movie comments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "scipy>=1.13",
  "joblib>=1.4",
  "faiss-cpu>=1.7.4",
  "sentence-transformers>=3.0",
  "pydantic-settings>=2.10.1",
  "ruff>=0.13.0",
  "black>=25.1.0",
  "textblob>=0.19.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*"]

[tool.uv]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-select = ["I","B","C4","UP","RUF"]
ignore = ["E501"]

[project.optional-dependencies]
dev = ["ruff>=0.5.6","pytest>=8.1","httpx>=0.27"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
